Fix agendum note delete icon wraping text: The delete icon is hidden until the note is hovered over. Hovering over the note (and hence displaying the delete icon) was causing note text to wrap if long enough and then unwrap on unhover. This isn't a beautiful UI experience.

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -33,20 +33,6 @@ body {
             visibility: visible;
         }
     }
-
-    .agendum-note {
-        .delete-link {
-            display: none;
-            color: inherit;
-            cursor: pointer;
-        }
-
-        &:hover {
-            .delete-link {
-                display: block;
-            }
-        }
-    }
 }
 
 .collection-item {
